--- a/card.html
+++ b/card.html
@@ -2,23 +2,60 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Cartão Profissional</title>
     </head>
     <body>
         <section class="menu">
             <nav class="cabecalho">
-                <a download="teste.txt">contato</a>
-                <a>sobre</a>
-                <a>redes</a>
-                <a>curiculo</a>
+                <section class="acessar_section">
+                    <a class="acessar"><u>Home</u></a>
+                </section>
+                <section class="acessar_section">
+                    <a class="acessar"><u>Trabalhos</u></a>
+                </section>
+                <section class="acessar_section">
+                    <a class="acessar"><u>Contatos</u></a>
+                </section>
+                <section class="acessar_section">
+                    <a class="acessar"><u>Redes</u></a>
+                </section>
+                <section class="acessar_section">
+                    <a class="acessar" href="teste.doc" download="teste.doc"><u>Currículo</u></a>
+                </section>
             </nav>
         </section>
         <section class="titulo">
-            <h1>Leonardo Melati Ambrosio</h1>
+            <h1><b>Leonardo Melati Ambrosio</b></h1>
         </section>
         <section class="conteudo">
-
+            <section class="sobremim">
+                <p>&nbsp&nbsp Olá! Me chamo Leonardo, residuo em Sorocaba - SP, e atualmente estou atuando de jovem aprendiz em uma empresa de teleatendimento bancário, no setor de SAC.</p>
+                <p>&nbsp&nbsp Em busca de minha primeira experiência na área de atuação de ADS, estou encaminhando para finalização do curso, que se encerra ao final deste ano de 2025, concluindo o quarto semestre. Pórem, mesmo sem expêriencia direta, realizo serviços de programação para minha atual empresa, com sistemas gerados através de HTML, JavaSrcit, CSS e Python, influenciando na agilidade da resolução de problemas.</p>
+                <p>&nbsp&nbsp Além das linguagens de programação, possuo conhecimento em IA's, com duas certificações de cursos profissionalizantes (Aplicação de Serviços de IA em Microsoft e Google), certificação Yellow Belt Seis Lean Sigma, focado na resolução de problemas e análises de estatísticas empresariais e Inglês Intermediário</p>
+            </section>
+            <section class="trabalhos">
+                <section class="titulo">
+                    <h2>Abaixo, mostrarei alguns de meus trabalhos:</h2>
+                </section>
+            </section>
+        </section>
+        <section class="controle-rodape">
+            <footer class="rodape">
+                <br>
+                <br>
+                <nav>
+                    <section class="redes">
+                        <a href="https://github.com/melatizx" target="_blank"><img src="img/github.svg"></a>
+                        <a href="https://instagram.com/melatizx" target="_blank"><img  src="img/instagram.png"></a>
+                        <a href="https://br.linkedin.com/in/leonardo-melati-566884318?trk=people-guest_people_search-card" target="_blank"><img src="img/linkedin.png"></a>
+                    </section>
+                </nav>
+            </footer>
+            <section class="creditos_section">
+                <p class="creditos">Site Design feito inteiramente por Leonardo Melati Ambrosio © 2025</p>
+                <p class="creditos">HTML, CSS e JS foram utilizados para o desenvolvimento</p>
+            </section>
         </section>
     </body>
 </html>
