--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -9,22 +10,24 @@
         <section class="menu">
             <nav class="cabecalho">
                 <section class="acessar_section">
-                    <a class="acessar"><u>Home</u></a>
+                    <a class="acessar" href="#home"><u>Home</u></a>
                 </section>
                 <section class="acessar_section">
-                    <a class="acessar"><u>Trabalhos</u></a>
+                    <a class="acessar" href="#trabalhos"><u>Trabalhos</u></a>
                 </section>
                 <section class="acessar_section">
-                    <a class="acessar"><u>Contatos</u></a>
+                    <a class="acessar" href="#contatos"><u>Contatos</u></a>
                 </section>
                 <section class="acessar_section">
-                    <a class="acessar"><u>Redes</u></a>
+                    <a class="acessar" href="#redes"><u>Redes</u></a>
                 </section>
                 <section class="acessar_section">
                     <a class="acessar" href="teste.doc" download="teste.doc"><u>Currículo</u></a>
                 </section>
             </nav>
         </section>
+        <br id="home" class="home">
+        <br>
         <section class="titulo">
             <h1><b>Leonardo Melati Ambrosio</b></h1>
         </section>
@@ -34,24 +37,60 @@
                 <p>&nbsp&nbsp Em busca de minha primeira experiência na área de atuação de ADS, estou encaminhando para finalização do curso, que se encerra ao final deste ano de 2025, concluindo o quarto semestre. Pórem, mesmo sem expêriencia direta, realizo serviços de programação para minha atual empresa, com sistemas gerados através de HTML, JavaSrcit, CSS e Python, influenciando na agilidade da resolução de problemas.</p>
                 <p>&nbsp&nbsp Além das linguagens de programação, possuo conhecimento em IA's, com duas certificações de cursos profissionalizantes (Aplicação de Serviços de IA em Microsoft e Google), certificação Yellow Belt Seis Lean Sigma, focado na resolução de problemas e análises de estatísticas empresariais e Inglês Intermediário</p>
             </section>
-            <section class="trabalhos">
+            <br id="trabalhos">
+            <section class="trabalhos" style="margin-top: 10px;">
                 <section class="titulo">
                     <h2>Abaixo, mostrarei alguns de meus trabalhos:</h2>
+                </section>
+                <section class="trabalhos">
+                    <section class="titulotrabalho">
+                        <h3><u>Codificação ASCII</u></h3>
+                    </section>
+                    <section class="explicacao">
+                        <p>Este meu trabalho se trata de um site de codificação de frases e palavras utilizando a tabela ASCII, metôdo esse que foi amplamente utilizado pelo exercito estadunidense. Ele funciona da seguinte maneira:</p>
+                        <p>Dividido em 3 partes, onde na primeira, letras são deslocados 3 posições para a direira seguino a tabela ASCII. Na segunda parte, a palavra e imvertida. E, por ultimo, da metade em diante toda frase/palavra é deslocada para 1 posição a esquerda na tabela ASCII.</p>
+                        <section class="imgtrabalho">
+                            <img src="img/ascii.png">
+                        </section>
+                        <p>Nesse trabalho, foi usado HTML, CSS, JS e Python. Para acessa-lo, basta clicar na imagem.</p>
+                    </section>
+                    <section class="titulotrabalho">
+                        <h3><u>Conversão de tempo</u></h3>
+                    </section>
+                    <section class="explicacao">
+                        <p>Este meu trabalho se trata de um site para otimização de tempo da minha atual a empresa.</p>
+                        <p>Ele transforma o tempo de ligação de hora:minuto:segundo para apenas segundos, uma coversão feita instantaneamente. Estilização toda com identidade da empresa.</p>
+                        <section class="imgtrabalho">
+                            <img src="img/ascii.png">
+                        </section>
+                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessa-lo, basta clicar na imagem.</p>
+                    </section>
+                    <section class="titulotrabalho">
+                        <h3><u>Red Dead Redemption</u></h3>
+                    </section>
+                    <section class="explicacao">
+                        <p>Este trabalho se trata de um site sobre o jogo Red Dead Redemption, um trabalho de escola passado pelo meu professor para treinamento de HTML e CSS.</p>
+                        <p>Por ser um site de treinamento, algumas paginas permanecem sem conteudo.</p>
+                        <section class="imgtrabalho">
+                            <a href="https://melatizx.github.io/RedDead" target="_blank"><img src="img/reddead.png"></a>
+                        </section>
+                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessa-lo, basta clicar na imagem.</p>
+                    </section>
                 </section>
                 <section class="arquivos">
                     <h3 style="font-size: 20px; margin-bottom: 50px;">Arquivos</h3>
                     <section class="linguagens_section">
                         <section class="linguagens">
-                            <a href="https://melatizx.github.io/js" target="_blank"><img src="img/javascript.svg"></a>
+                            <a href="https://melatizx.github.io/js" target="_blank" title="Atividades de JavaSrcit"><img src="img/javascript.svg"></a>
                         </section>
                         <section class="linguagens">
-                            <a href="https://github.com/melatizx/exerc.python" target="_blank"><img src="img/python.svg"></a>
+                            <a href="https://github.com/melatizx/exerc.python" target="_blank" title="Atividades de Python"><img src="img/python.svg"></a>
                         </section>
                     </section>
                 </section>
             </section>
         </section>
-        <section class="contatos">
+        <section class="contatos" id="contatos">
             <p>Contatos: </p>
             <p><u> <a>&nbspleonardomelati1@gmail.com</a> | <a href="https://wa.me/5515997620740" target="_blank">55+ 15 99762-0740&nbsp</a> </u></p>
         </section>
@@ -60,7 +99,7 @@
                 <br>
                 <br>
                 <nav>
-                    <section class="redes">
+                    <section class="redes" id="redes">
                         <a href="https://github.com/melatizx" target="_blank"><img src="img/github.svg" onmouseenter="trocar(this, 'img/github_gray.svg')" onmouseleave="trocar(this, 'img/github.svg')"></a>
                         <a href="https://instagram.com/melatizx" target="_blank"><img  src="img/instagram.svg" onmouseenter="trocar(this, 'img/instagram_gray.svg')" onmouseleave="trocar(this, 'img/instagram.svg')"></a>
                         <a href="https://br.linkedin.com/in/leonardo-melati-566884318?trk=people-guest_people_search-card" target="_blank"><img src="img/linkedin.svg" onmouseenter="trocar(this, 'img/linkedin_gray.svg')" onmouseleave="trocar(this, 'img/linkedin.svg')"></a>
