--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </section>
         <section class="conteudo">
             <section class="sobremim">
-                <p>&nbsp&nbsp Olá! Me chamo Leonardo, residuo em Sorocaba - SP, e atualmente estou atuando de jovem aprendiz em uma empresa de teleatendimento bancário, no setor de SAC.</p>
-                <p>&nbsp&nbsp Em busca de minha primeira experiência na área de atuação de ADS, estou encaminhando para finalização do curso, que se encerra ao final deste ano de 2025, concluindo o quarto semestre. Pórem, mesmo sem expêriencia direta, realizo serviços de programação para minha atual empresa, com sistemas gerados através de HTML, JavaSrcit, CSS e Python, influenciando na agilidade da resolução de problemas.</p>
-                <p>&nbsp&nbsp Além das linguagens de programação, possuo conhecimento em IA's, com duas certificações de cursos profissionalizantes (Aplicação de Serviços de IA em Microsoft e Google), certificação Yellow Belt Seis Lean Sigma, focado na resolução de problemas e análises de estatísticas empresariais e Inglês Intermediário</p>
+                <p>&nbsp&nbsp Olá! Me chamo Leonardo, resido em Sorocaba - SP, e atualmente estou atuando de jovem aprendiz em uma empresa de teleatendimento bancário, no setor de SAC.</p>
+                <p>&nbsp&nbsp Em busca de minha primeira experiência na área de atuação de ADS, estou encaminhando para finalização do curso, que se encerra ao final deste ano de 2025, concluindo o quarto semestre. Porém, mesmo sem expêriencia direta, realizo serviços de programação para minha atual empresa, com sistemas gerados através de HTML, JavaSrcit, CSS e Python, influenciando na agilidade da resolução de problemas.</p>
+                <p>&nbsp&nbsp Além das linguagens de programação, possuo conhecimento em IA's, com duas certificações de cursos profissionalizantes (Aplicação de Serviços de IA em Microsoft e Google), certificação Yellow Belt Six Lean Sigma, focado na resolução de problemas e análises de estatísticas empresariais e Inglês Intermediário</p>
             </section>
             <br id="trabalhos">
             <section class="trabalhos" style="margin-top: 10px;">
