--- a/index.html
+++ b/index.html
@@ -47,34 +47,34 @@
                         <h3><u>Codificação ASCII</u></h3>
                     </section>
                     <section class="explicacao">
-                        <p>Este meu trabalho se trata de um site de codificação de frases e palavras utilizando a tabela ASCII, metôdo esse que foi amplamente utilizado pelo exercito estadunidense. Ele funciona da seguinte maneira:</p>
-                        <p>Dividido em 3 partes, onde na primeira, letras são deslocados 3 posições para a direira seguino a tabela ASCII. Na segunda parte, a palavra e imvertida. E, por ultimo, da metade em diante toda frase/palavra é deslocada para 1 posição a esquerda na tabela ASCII.</p>
+                        <p>Este meu trabalho se trata de um site de codificação de frases e palavras utilizando a tabela ASCII, método esse que foi amplamente utilizado pelo exército estadunidense. Ele funciona da seguinte maneira:</p>
+                        <p>Dividido em 3 partes, onde na primeira, letras são deslocados 3 posições para a direira seguindo a tabela ASCII. Na segunda parte, a palavra e invertida. E, por último, da metade em diante toda frase/palavra é deslocada para 1 posição a esquerda na tabela ASCII.</p>
                         <section class="imgtrabalho">
                             <img src="img/ascii.png">
                         </section>
-                        <p>Nesse trabalho, foi usado HTML, CSS, JS e Python. Para acessa-lo, basta clicar na imagem.</p>
+                        <p>Nesse trabalho, foi usado HTML, CSS, JS e Python. Para acessá-lo, basta clicar na imagem.</p>
                     </section>
                     <section class="titulotrabalho">
                         <h3><u>Conversão de tempo</u></h3>
                     </section>
                     <section class="explicacao">
-                        <p>Este meu trabalho se trata de um site para otimização de tempo da minha atual a empresa.</p>
-                        <p>Ele transforma o tempo de ligação de hora:minuto:segundo para apenas segundos, uma coversão feita instantaneamente. Estilização toda com identidade da empresa.</p>
+                        <p>Este meu trabalho se trata de um site para otimização de tempo da minha atual empresa.</p>
+                        <p>Ele transforma o tempo de ligação de hora:minuto:segundo para apenas segundos, uma conversão feita instantaneamente. Estilização toda com identidade da empresa.</p>
                         <section class="imgtrabalho">
                             <img src="img/ascii.png">
                         </section>
-                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessa-lo, basta clicar na imagem.</p>
+                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessá-lo, basta clicar na imagem.</p>
                     </section>
                     <section class="titulotrabalho">
                         <h3><u>Red Dead Redemption</u></h3>
                     </section>
                     <section class="explicacao">
                         <p>Este trabalho se trata de um site sobre o jogo Red Dead Redemption, um trabalho de escola passado pelo meu professor para treinamento de HTML e CSS.</p>
-                        <p>Por ser um site de treinamento, algumas paginas permanecem sem conteudo.</p>
+                        <p>Por ser um site de treinamento, algumas paginas permanecem sem conteúdo.</p>
                         <section class="imgtrabalho">
                             <a href="https://melatizx.github.io/RedDead" target="_blank"><img src="img/reddead.png"></a>
                         </section>
-                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessa-lo, basta clicar na imagem.</p>
+                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessá-lo, basta clicar na imagem.</p>
                     </section>
                 </section>
                 <section class="arquivos">
