--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <a class="acessar" href="#home"><u>Home</u></a>
                 </section>
                 <section class="acessar_section">
-                    <a class="acessar" href="#trabalhos"><u>Trabalhos</u></a>
+                    <a class="acessar" href="trabalhos.html"><u>Trabalhos</u></a>
                 </section>
                 <section class="acessar_section">
                     <a class="acessar" href="#contatos"><u>Contatos</u></a>
@@ -38,59 +38,8 @@
                 <p>&nbsp&nbsp Em busca de minha primeira experiência na área de atuação de ADS, estou encaminhando para finalização do curso, que se encerra ao final deste ano de 2025, concluindo o quarto semestre. Porém, mesmo sem expêriencia direta, realizo serviços de programação para minha atual empresa, com sistemas gerados através de HTML, JavaSrcit, CSS e Python, influenciando na agilidade da resolução de problemas.</p>
                 <p>&nbsp&nbsp Além das linguagens de programação, possuo conhecimento em IA's, com duas certificações de cursos profissionalizantes (Aplicação de Serviços de IA em Microsoft e Google), certificação Yellow Belt Six Lean Sigma, focado na resolução de problemas e análises de estatísticas empresariais e Inglês Intermediário</p>
             </section>
-            <br id="trabalhos">
-            <section class="trabalhos" style="margin-top: 10px;">
-                <section class="titulo">
-                    <h2>Abaixo, mostrarei alguns de meus trabalhos:</h2>
-                </section>
-                <section class="trabalhos">
-                    <section class="titulotrabalho">
-                        <h3><u>Codificação ASCII</u></h3>
-                    </section>
-                    <section class="explicacao">
-                        <p>Este meu trabalho se trata de um site de codificação de frases e palavras utilizando a tabela ASCII, método esse que foi amplamente utilizado pelo exército estadunidense. Ele funciona da seguinte maneira:</p>
-                        <p>Dividido em 3 partes, onde na primeira, letras são deslocados 3 posições para a direira seguindo a tabela ASCII. Na segunda parte, a palavra e invertida. E, por último, da metade em diante toda frase/palavra é deslocada para 1 posição a esquerda na tabela ASCII.</p>
-                        <section class="imgtrabalho">
-                            <img src="img/ascii.png">
-                        </section>
-                        <p>Nesse trabalho, foi usado HTML, CSS, JS e Python. Para acessá-lo, basta clicar na imagem.</p>
-                    </section>
-                    <section class="titulotrabalho">
-                        <h3><u>Conversão de tempo</u></h3>
-                    </section>
-                    <section class="explicacao">
-                        <p>Este meu trabalho se trata de um site para otimização de tempo da minha atual empresa.</p>
-                        <p>Ele transforma o tempo de ligação de hora:minuto:segundo para apenas segundos, uma conversão feita instantaneamente. Estilização toda com identidade da empresa.</p>
-                        <section class="imgtrabalho">
-                            <img src="img/ascii.png">
-                        </section>
-                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessá-lo, basta clicar na imagem.</p>
-                    </section>
-                    <section class="titulotrabalho">
-                        <h3><u>Red Dead Redemption</u></h3>
-                    </section>
-                    <section class="explicacao">
-                        <p>Este trabalho se trata de um site sobre o jogo Red Dead Redemption, um trabalho de escola passado pelo meu professor para treinamento de HTML e CSS.</p>
-                        <p>Por ser um site de treinamento, algumas paginas permanecem sem conteúdo.</p>
-                        <section class="imgtrabalho">
-                            <a href="https://melatizx.github.io/RedDead" target="_blank"><img src="img/reddead.png"></a>
-                        </section>
-                        <p>Nesse trabalho, foi usado HTML, CSS e JS. Para acessá-lo, basta clicar na imagem.</p>
-                    </section>
-                </section>
-                <section class="arquivos">
-                    <h3 style="font-size: 20px; margin-bottom: 50px;">Arquivos</h3>
-                    <section class="linguagens_section">
-                        <section class="linguagens">
-                            <a href="https://melatizx.github.io/js" target="_blank" title="Atividades de JavaSrcit"><img src="img/javascript.svg"></a>
-                        </section>
-                        <section class="linguagens">
-                            <a href="https://github.com/melatizx/exerc.python" target="_blank" title="Atividades de Python"><img src="img/python.svg"></a>
-                        </section>
-                    </section>
-                </section>
-            </section>
-        </section>
+            <br>
+            
         <section class="contatos" id="contatos">
             <p>Contatos: </p>
             <p><u> <a>&nbspleonardomelati1@gmail.com</a> | <a href="https://wa.me/5515997620740" target="_blank">55+ 15 99762-0740&nbsp</a> </u></p>
