--- a/trabalhos.html
+++ b/trabalhos.html
@@ -42,7 +42,7 @@
                     <p>Este programa se trata de um trabalho de finalização anual do curso, um programa semelhante ao já conhecido Spotify. Ele funciona de forma semelhante com funções iguais.</p>
                     <p>Dentro do programa, você pode adicionar músicas baixadas na sua máquina, remover músicas, pausar, avançar e retornar. O programa só pode ser rodado dentro de alguum programa de codificação (Por exemplo o Visual Studio Code), portanto, estarei disponibilizando o código para baixarem e testarem!</p>
                     <section class="imgtrabalho">
-                        <a href="downloads/spotipy.py" download="spotipy.py"><img src="img/spotipy.PNG"></a>
+                        <img class="escurecer" src="img/spotipy.PNG">
                     </section>
                     <p>Nesse trabalho, foi usado Python. Para baixar o código, basta clicar na imagem.</p>
                 </section>
