--- a/trabalhos.html
+++ b/trabalhos.html
@@ -43,6 +43,10 @@
                     <p>Dentro do programa, você pode adicionar músicas baixadas na sua máquina, remover músicas, pausar, avançar e retornar. O programa só pode ser rodado dentro de alguum programa de codificação (Por exemplo o Visual Studio Code), portanto, estarei disponibilizando o código para baixarem e testarem!</p>
                     <section class="imgtrabalho">
                         <img class="escurecer" src="img/spotipy.PNG">
+                        <section class="opcoes">
+                            <img class="acessar_site" src="img/door-open.svg">
+                            <img class="acessar_github" src="img/code.svg">
+                        </section>
                     </section>
                     <p>Nesse trabalho, foi usado Python. Para baixar o código, basta clicar na imagem.</p>
                 </section>
