--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
         <nav>
             <ul class="links">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Sobre Mim</a></li>
                 <li><a href="#">Trabalhos</a></li>
                 <li><a href="#">Contatos</a></li>
                 <li><a href="#">Curiculo</a></li>
@@ -28,6 +28,11 @@
             <div class="menu-logo"><img src="../img/list.svg"></div>
         </nav>
     </header>
+    <section class="bio">
+        <section class="titulo">
+            <h1>Melatizx</h1>
+        </section>
+    </section>
     <script src="../main.js"></script>
 </body>
 </html>
