--- a/pages/index.html
+++ b/pages/index.html
@@ -25,14 +25,35 @@
                 <li><a href="#">Contatos</a></li>
                 <li><a href="#">Curiculo</a></li>
             </ul>
-            <div class="menu-logo"><img src="../img/list.svg"></div>
+            <div class="menu-logo"><img src="../img/icons/list.svg"></div>
         </nav>
     </header>
     <section class="bio">
         <section class="titulo">
+            <br>
+            <br>
             <h1>Melatizx</h1>
         </section>
+        <br>
+        <section id="backfront">
+            <p>Programador Back End/Front End</p>
+        </section>
+        <section id="linguagens">
+            <h2 class="subtitulo">Conhecimento em:</h2>
+            <ul>
+                <li>Python</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>JSON</li>
+            </ul>
+        </section>
+        <div class="animation">
+            <div></div>
+        </div>
     </section>
+    <footer class="rodape">
+    </footer>
     <script src="../main.js"></script>
 </body>
 </html>
