--- a/pages/index.html
+++ b/pages/index.html
@@ -19,11 +19,11 @@
         <div class="logo">MLT</div>
         <nav>
             <ul class="links">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Trabalhos</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="sobre.html">Sobre Mim</a></li>
+                <li><a href="trabalhos.html">Trabalhos</a></li>
                 <li><a href="#">Contatos</a></li>
-                <li><a href="#">Curiculo</a></li>
+                <li><a href="../downloads/teste.doc" download="teste.doc">Curiculo</a></li>
             </ul>
             <div class="menu-logo"><img src="../img/icons/list.svg"></div>
         </nav>
@@ -49,10 +49,24 @@
             </ul>
         </section>
         <div class="animation">
-            <div></div>
+            <div><p id="MLT-animation"><b>MLT</b></p></div>
         </div>
+        <p class="index-explicacao">Neste site, programado inteiramente por mim, mostrarei alguns de meus trabalhos mais memoraveis, para que você posssa avaliar e caso se interesse, me contratar posteriormente.</p>
+        <p class="index-explicacao">Estarei disponibilizando formas de contato e meu curriculo para download.</p>
     </section>
     <footer class="rodape">
+        <section class="section-redes">
+            <a class="redes" href="https://github.com/melatizx" target="_blank"><img src="../img/redes/github.svg"></a>
+            <a class="redes" href="https://instagram.com/melatizx" target="_blank"><img src="../img/redes/instagram.svg"></a>
+            <a class="redes" href="#" target="_blank"><img src="../img/redes/linkedin.svg"></a>
+            <a class="redes" href="https://wa.me/5515997620740" target="_blank"><img src="../img/redes/whatsapp.svg"></a>
+        </section>
+        <br>
+        <br>
+        <br>
+        <p>Site inteiramente programado por mim, utilizando CSS e JS</p>
+        <p>© 2025 Leonardo "Melatizx" Melati. Todos os direitos reservados.</p>
+        <br>
     </footer>
     <script src="../main.js"></script>
 </body>
