--- a/pages/index.html
+++ b/pages/index.html
@@ -36,7 +36,8 @@
         </section>
         <br>
         <section id="backfront">
-            <p>Programador Back End/Front End</p>
+            <p>Programador Back-End/Front-End</p>
+            <p>Se especializando em Back-End</p>
         </section>
         <section id="linguagens">
             <h2 class="subtitulo">Conhecimento em:</h2>
@@ -51,8 +52,11 @@
         <div class="animation">
             <div><p id="MLT-animation"><b>MLT</b></p></div>
         </div>
-        <p class="index-explicacao">Neste site, programado inteiramente por mim, mostrarei alguns de meus trabalhos mais memoraveis, para que você posssa avaliar e caso se interesse, me contratar posteriormente.</p>
-        <p class="index-explicacao">Estarei disponibilizando formas de contato e meu curriculo para download.</p>
+        <div class=" animation-explicacao">
+            <p class="index-explicacao">Neste site, programado inteiramente por mim, mostrarei alguns de meus trabalhos mais memoraveis, para que você posssa avaliar e caso se interesse, me contratar posteriormente.</p>
+        <div class="animation-explicacao a2">
+            <p class="index-explicacao">Estarei disponibilizando formas de contato e meu curriculo para download.</p>
+        </div>
     </section>
     <footer class="rodape">
         <section class="section-redes">
